[gd_scene load_steps=3 format=3 uid="uid://cyuuikcle0cls"]

[ext_resource type="Script" path="res://inventory/items/item_scripts/axe.gd" id="1_m3ln6"]
[ext_resource type="Texture2D" uid="uid://clhqnc5ac5vqu" path="res://inventory/axe-removebg-preview-removebg-preview.png" id="1_wb4km"]

[node name="Axe" type="Node2D"]
script = ExtResource("1_m3ln6")

[node name="Axe_Sprite" type="Sprite2D" parent="."]
position = Vector2(15, -50)
texture = ExtResource("1_wb4km")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -65)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(23, -18, 23, 13, 11, 13, 6, 6, 6, -9, 10, -17)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
